# croupier

./: LICENSE  README.md  pyproject.toml
croupier/: __init__.py  __main__.py  io.py  morris.py
examples/: quasi-optimized-trajectories.py
src/croupier/: morris.py
