[tool.poetry]
name = "croupier"
version = "0.0.1-alpha"
description = "A minimal framework for creating design of experiments"
authors = ["Gabriel B. Santos <gabriel(dot)bertacco(at)unesp(dot)br>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = ">1.8"
numba = ">=0.55"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
