[tool.poetry]
name = "croupier"
version = "0.0.1"
description = "Sampling strategies for the Elementary Effects method"
authors = ["Gabriel B. Santos <gabriel.bertacco@unesp.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = ">1.8"
numba = ">=0.55"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
