[project]
name = "croupier"
version = "0.1.0"
description = "A collection of sampling strategies for the Elementary Effects method"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "scipy>=1.15.3",
]

[tool.ruff]
line-length = 79
select = ["E", "F", "D", "I"]
